--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
-    "@number-flow/react": "0.5.5",
     "@faker-js/faker": "^9.6.0",
+    "@number-flow/react": "0.5.5",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
@@ -23,6 +23,7 @@
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.5",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-form": "^1.0.0",
